Remove flex from body due to overflow issue on logs page

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -39,12 +39,6 @@ body * {
   font-family: 'Roboto', sans-serif;
 }
 
-body{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
 a {
   color: var(--link-col);
 }
